<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyRuns2</string>
    <string name="preference_name">my_shared_preferences</string>

    <!-- Setting Fragment -->
    <string name="ui_settings_preferences_title">Account Preferences</string>
    <string name="ui_settings_profile_title">Names, Email, Class, etc</string>
    <string name="ui_settings_profile_summary">User Profile</string>
    <string name="ui_settings_privacy_title">Privacy Setting</string>
    <string name="ui_settings_privacy_summary">Posting your records anonymously</string>
    <string name="preference_key_settings_privacy">settings_privacy</string>

    <string name="ui_settings_additional_title">Additional Settings</string>
    <string name="ui_settings_unit_title">Unit Preference</string>
    <string name="ui_settings_unit_summary">Select the units</string>

    <string name="ui_settings_comment_title">Comments</string>
    <string name="ui_settings_comment_summary">Please enter your comments</string>
    <string name="preference_key_settings_comments">settings_comments</string>

    <string name="ui_settings_misc_title">Misc.</string>
    <string name="ui_settings_page_title">Webpage</string>
    <string name="ui_settings_page_summary">http://web.cs.dartmouth.edu/</string>

    <!-- Start Fragment -->
    <string-array name="spinner_input_type">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="spinner_activity_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string name="ui_listview_duration_title">Duration</string>
    <string name="ui_listview_distance_title">Distance</string>
    <string name="ui_listview_calory_title">Calories</string>
    <string name="ui_listview_heartrate_title">Heart Rate</string>
    <string name="ui_listview_comment_title">Comment</string>
    <string name="ui_listview_comment_summary">How did it go? Notes here.</string>

    <!-- Profile -->
    <string name="profile_photo_file_name_temp">tmp.png</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_toast_save_text">Profile saved</string>
    <string name="ui_profile_toast_cancel_text">Change canceled</string>
    <string name="ui_button_save_title">SAVE</string>
    <string name="ui_button_change_title">CHANGE</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_profile_photo_content_description">Your profile photo:</string>
    <string name="ui_profile_photo_picker_title">"Pick Profile Picture"</string>

    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_number">profile_number</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="action_bar">Settings</string>


</resources>
