<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.dartmouth.cs.camera.SettingsFragment">

    <TextView
        style="@style/SettingParentTitleFont"
        android:text="@string/ui_settings_preferences_title" />

    <LinearLayout
        android:id="@+id/llSettingsProfile"
        style="@style/SettingChildLinearLayout">

        <TextView
            style="@style/SettingChildTitleFont"
            android:text="@string/ui_settings_profile_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_settings_profile_summary" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llSettingsPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                style="@style/SettingChildTitleFont"
                android:text="@string/ui_settings_privacy_title" />

            <TextView
                style="@style/SettingSummaryFont"
                android:text="@string/ui_settings_privacy_summary" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbSettingsPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <TextView
        style="@style/SettingParentTitleFont"
        android:text="@string/ui_settings_additional_title" />

    <LinearLayout
        android:id="@+id/llSettingsUnit"
        style="@style/SettingChildLinearLayout">

        <TextView
            style="@style/SettingChildTitleFont"
            android:text="@string/ui_settings_unit_title" />

        <TextView
            style="@style/SettingSummaryFont"
            android:text="@string/ui_settings_unit_summary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSettingsComment"
        style="@style/SettingChildLinearLayout">

        <TextView
            style="@style/SettingChildTitleFont"
            android:text="@string/ui_settings_comment_title" />

        <TextView
            style="@style/SettingSummaryFont"
            android:text="@string/ui_settings_comment_summary" />
    </LinearLayout>

    <TextView
        style="@style/SettingParentTitleFont"
        android:text="@string/ui_settings_misc_title" />

    <LinearLayout
        android:id="@+id/llSettingsPage"
        style="@style/SettingChildLinearLayout">

        <TextView
            style="@style/SettingChildTitleFont"
            android:text="@string/ui_settings_page_title" />

        <TextView
            style="@style/SettingSummaryFont"
            android:text="@string/ui_settings_page_summary" />
    </LinearLayout>

</LinearLayout>
